feat: replace files

--- a/example/.textlintrc
+++ b/example/.textlintrc
@@ -1,5 +1,10 @@
 {
     "rules": {
         "preset-smarthr": true
+    },
+    "plugins": {
+        "@textlint/markdown": {
+            "extensions": [".mdx"]
+        }
     }
 }
