--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@textlint/textlint-plugin-markdown": "^5.3.2",
     "textlint": "^11.8.2",
     "textlint-rule-preset-smarthr": "file:.."
   }
