--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
-  "name": "textlint-rule-preset-smarthr",
-  "author": "SmartHR Document Team",
   "version": "1.0.0",
   "keywords": [
     "textlintrule"
   ],
-  "description": "",
-  "main": "./lib/textlint-rule-preset-smarthr.js",
+  "main": "lib/index.js",
   "files": [
-    "lib"
+    "lib/",
+    "src/"
   ],
   "scripts": {
-    "test": "cd example && npm it"
+    "example": "cd example && npm it",
+    "test": "textlint-scripts test",
+    "build": "textlint-scripts build",
+    "prepublish": "npm run --if-present build"
   },
+  "devDependencies": {
+    "textlint-scripts": "^3.0.0",
+    "textlint-tester": "^5.3.2"
+  },
+  "name": "textlint-rule-preset-smarthr",
+  "directories": {
+    "test": "test"
+  },
+  "author": "",
   "license": "MIT",
+  "description": "",
   "dependencies": {
     "@textlint/module-interop": "^1.2.2",
-    "textlint-rule-ja-no-mixed-period": "^2.1.1"
+    "textlint-rule-ja-no-mixed-period": "^2.1.1",
+    "textlint-rule-prh": "^5.3.0"
   }
 }
