feat: support for .mdx

--- a/example/package.json
+++ b/example/package.json
@@ -2,7 +2,7 @@
   "name": "example",
   "private": true,
   "scripts": {
-    "test": "textlint README.md"
+    "test": "textlint ./**/*.md ./**/*.mdx"
   },
   "author": "",
   "license": "MIT",
