--- a/example/package.json
+++ b/example/package.json
@@ -2,12 +2,11 @@
   "name": "example",
   "private": true,
   "scripts": {
-    "test": "textlint ./**/*.md ./**/*.mdx"
+    "test": "textlint ./**/*.md"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@textlint/textlint-plugin-markdown": "^5.3.2",
     "textlint": "^11.8.2",
     "textlint-rule-preset-smarthr": "file:.."
   }
