fix: fix package.json

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   "directories": {
     "test": "test"
   },
-  "author": "",
+  "author": "SmartHR textlint Team",
   "license": "MIT",
   "description": ""
 }
