--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "prepublish": "npm run --if-present build"
   },
   "devDependencies": {
-    "@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.7",
-    "@textlint/module-interop": "^1.2.2",
     "@textlint/types": "^1.5.2",
     "@types/node": "^12.20.4",
     "prettier": "^2.2.1",
+    "textlint-scripts": "^3.0.0",
+    "textlint-tester": "^5.3.2",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.6.4"
+  },
+  "dependencies": {
+    "@textlint/module-interop": "^1.2.2",
+    "@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.7",
     "textlint-rule-ja-hiragana-daimeishi": "^1.0.0",
     "textlint-rule-ja-hiragana-fukushi": "^1.3.0",
     "textlint-rule-ja-hiragana-hojodoushi": "^1.0.4",
@@ -45,11 +51,7 @@
     "textlint-rule-ja-space-after-exclamation": "^2.0.2",
     "textlint-rule-ja-space-after-question": "^2.0.2",
     "textlint-rule-ja-space-around-code": "^2.0.2",
-    "textlint-rule-ja-space-between-half-and-full-width": "^2.0.2",
-    "textlint-scripts": "^3.0.0",
-    "textlint-tester": "^5.3.2",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.6.4"
+    "textlint-rule-ja-space-between-half-and-full-width": "^2.0.2"
   },
   "name": "textlint-rule-preset-smarthr",
   "directories": {
