--- a/package.json
+++ b/package.json
@@ -12,27 +12,37 @@
     "example": "cd example && npm it",
     "test": "textlint-scripts test",
     "build": "textlint-scripts build",
-    "prepublish": "npm run --if-present build"
+    "prepublish": "npm run --if-present build",
+    "release": "standard-version",
+    "release:dryrun": "standard-version --dry-run"
   },
   "devDependencies": {
     "@textlint/types": "^1.5.2",
     "@types/node": "^12.20.4",
     "prettier": "^2.2.1",
+    "standard-version": "^9.1.1",
     "textlint-scripts": "^3.0.0",
     "textlint-tester": "^5.3.2",
     "ts-node": "^8.10.2",
     "typescript": "^3.6.4"
   },
   "dependencies": {
-    "@textlint/module-interop": "^1.2.2",
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.7",
+    "@textlint/module-interop": "^1.2.2",
     "textlint-rule-ja-hiragana-daimeishi": "^1.0.0",
     "textlint-rule-ja-hiragana-fukushi": "^1.3.0",
     "textlint-rule-ja-hiragana-hojodoushi": "^1.0.4",
     "textlint-rule-ja-hiragana-keishikimeishi": "^1.1.0",
+    "textlint-rule-ja-nakaguro-or-halfwidth-space-between-katakana": "^2.0.2",
     "textlint-rule-ja-no-abusage": "^2.0.1",
     "textlint-rule-ja-no-mixed-period": "^2.1.1",
     "textlint-rule-ja-no-redundant-expression": "^3.0.2",
+    "textlint-rule-ja-no-space-around-parentheses": "^2.0.2",
+    "textlint-rule-ja-no-space-between-full-width": "^2.0.2",
+    "textlint-rule-ja-space-after-exclamation": "^2.0.2",
+    "textlint-rule-ja-space-after-question": "^2.0.2",
+    "textlint-rule-ja-space-around-code": "^2.0.2",
+    "textlint-rule-ja-space-between-half-and-full-width": "^2.0.2",
     "textlint-rule-max-ten": "^2.0.4",
     "textlint-rule-no-double-negative-ja": "^1.0.6",
     "textlint-rule-no-doubled-conjunction": "^1.0.3",
@@ -44,14 +54,7 @@
     "textlint-rule-no-mixed-zenkaku-and-hankaku-alphabet": "^1.0.1",
     "textlint-rule-no-nfd": "^1.0.2",
     "textlint-rule-prh": "^5.3.0",
-    "textlint-rule-sentence-length": "^2.2.0",
-    "textlint-rule-ja-nakaguro-or-halfwidth-space-between-katakana": "^2.0.2",
-    "textlint-rule-ja-no-space-around-parentheses": "^2.0.2",
-    "textlint-rule-ja-no-space-between-full-width": "^2.0.2",
-    "textlint-rule-ja-space-after-exclamation": "^2.0.2",
-    "textlint-rule-ja-space-after-question": "^2.0.2",
-    "textlint-rule-ja-space-around-code": "^2.0.2",
-    "textlint-rule-ja-space-between-half-and-full-width": "^2.0.2"
+    "textlint-rule-sentence-length": "^2.2.0"
   },
   "name": "textlint-rule-preset-smarthr",
   "directories": {
