--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "lib/",
     "src/"
   ],
+  "homepage": "https://github.com/kufu/textlint-rule-preset-smarthr#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kufu/textlint-rule-preset-smarthr.git"
+  },
   "scripts": {
     "example": "cd example && npm it",
     "test": "textlint-scripts test",
