--- a/dict/prh-tech-word.yml
+++ b/dict/prh-tech-word.yml
@@ -761,6 +761,8 @@ rules:
     pattern: /マスタ([^ー])/
   - expected: ユーザー$1
     pattern: /ユーザ([^ー])/
+  - expected: ユーザビリティ
+    pattern: /ユーザービリティ?/
   - expected: フィルター$1
     pattern: /フィルタ([^ー])/
   - expected: ナンバー$1
