--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "release:dryrun": "standard-version --dry-run"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@textlint/types": "^1.5.2",
     "@types/node": "^12.20.4",
+    "husky": "^6.0.0",
     "prettier": "^2.2.1",
     "standard-version": "^9.1.1",
     "textlint-scripts": "^3.0.0",
