chore: 依存度が強いパッケージをグループ化してconflictを抑える

--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,27 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "local>kufu/renovate-config"
-  ]
+  ],
+  "npm": {
+    "packageRules": [
+      {
+        "groupName": "textlint rules",
+        "matchPackageNames": [
+          "@textlint-rule/textlint-rule-no-unmatched-pair",
+          "@textlint/module-interop"
+        ],
+        "matchPackagePatterns": [
+          "^textlint-rule-*"
+        ]
+      },
+      {
+        "groupName": "textlint family",
+        "matchPackageNames": [
+          "@textlint/types",
+          "textlint-scripts",
+          "textlint-tester"
+        ]
+      }
+    ]
+  }
 }
