--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
-
 # use yarn
 package-lock.json
+
+# dotenv environment variable files
+.env*
