--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
   "dependencies": {
     "@textlint-rule/textlint-rule-no-unmatched-pair": "^1.0.8",
     "@textlint/module-interop": "^12.0.0",
+    "airtable": "^0.11.1",
+    "dotenv": "^10.0.0",
+    "js-yaml": "^4.1.0",
     "textlint-rule-ja-hiragana-daimeishi": "^1.0.0",
     "textlint-rule-ja-hiragana-fukushi": "^1.3.0",
     "textlint-rule-ja-hiragana-hojodoushi": "^1.0.4",
