--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
-name: Build & Test
-
+name: Test
 on:
   push:
     branches:
       - main
   pull_request:
+
 jobs:
   build-publish:
     runs-on: ubuntu-latest
