fix: specの書き方を修正

--- a/dict/prh-basic.yml
+++ b/dict/prh-basic.yml
@@ -152,10 +152,10 @@ rules:
     prh: 「在職中・休職中・退職済み」のうち、どの状態にあるかを示すのが「在籍状況」です。
     specs:
       - from: 在職状況
-      - to: 在籍状況
+        to: 在籍状況
   - expected: 在職中
     pattern: 在籍中
     prh: 休職中でも会社に籍はあるので、「在籍中」には休職中も含まれます。
     specs:
       - from: 在籍中
-      - to: 在職中
+        to: 在職中
