feat: 在籍状況・在職中のルールを追加 (#92)
* feat: 在籍状況・在職中のルールを追加

--- a/dict/prh-basic.yml
+++ b/dict/prh-basic.yml
@@ -147,3 +147,15 @@ rules:
   - expected: "サブドメイン"
     pattern: "テナントID"
     prh: 「テナントID」は社内用語のため、「サブドメイン」に置き換えます。内部的に使用する「tenant_id」はそのまま表記してください。
+  - expected: 在籍状況
+    pattern: 在職状況
+    prh: 「在職中・休職中・退職済み」のうち、どの状態にあるかを示すのが「在籍状況」です。
+    specs:
+      - from: 在職状況
+        to: 在籍状況
+  - expected: 在職中
+    pattern: 在籍中
+    prh: 休職中でも会社に籍はあるので、「在籍中」には休職中も含まれます。
+    specs:
+      - from: 在籍中
+        to: 在職中
