--- a/.github/titleLint.yml
+++ b/.github/titleLint.yml
@@ -1,3 +1,3 @@
-regex:  (feat|fix|docs|chore|style|refactor|perf|test): .*
+regex:  (feat|fix|docs|chore|style|refactor|perf|test)(\(.*\))*: .*
 exclude_users:
   - renovate
