--- a/example/.textlintrc
+++ b/example/.textlintrc
@@ -14,7 +14,7 @@
       "ja-no-redundant-expression": true,
       "no-mixed-zenkaku-and-hankaku-alphabet": true,
       "ja-keishikimeishi": {
-            "ditection_hou_kata" : false
+            "detection_hou_kata" : false
         },
       "ja-hiragana-fukushi": true,
       "ja-hiragana-hojodoushi": true,
