--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,9 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
-
 # use yarn
 package-lock.json
+
+# env
+
+.env
