feat: airtableからprh用ymlファイルを書き出す仕組みを設定 (#129)
* chore(release): 1.9.0

* feat: airtableからprh用ymlファイルを書き出すスクリプトの追加

* feat: 警告メッセージを追加

* feat: prh-basicをprh-ideomatic-usageに置き換え

* fix: test用ディレクトリ内の.textlintrcを修正

* Update .gitignore

Co-authored-by: Daisuke Kondo <gachapining@gmail.com>

* feat: 型確認に変更、実行コードのディレクトリ変更

* fix: fsのimport文を削除

* fix: fsモジュールの再読み込み

* fix: yarn.lock更新

* feat: exportコードをscriptディレクトリに移動

* fix: 足らない親キーを追加

* feat: ymlを最新版に更新

Co-authored-by: Daisuke Kondo <gachapining@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
-
 # use yarn
 package-lock.json
+
+# env
+.env
