feat: airtable出力用actionにtestを追加

--- a/.github/workflows/PullRequestAndExportAirtable.yml
+++ b/.github/workflows/PullRequestAndExportAirtable.yml
@@ -26,6 +26,9 @@ jobs:
       - run: yarn export:airtable
       - run: yarn build
 
+      - name: Test
+        run: yarn test
+
       - name: craete pull request
         uses: peter-evans/create-pull-request@v3
         with:
