[create-pull-request] automated change

--- a/dict/prh-idiomatic-usage.yml
+++ b/dict/prh-idiomatic-usage.yml
@@ -236,7 +236,7 @@ rules:
       - 差戻し
   - expected: 行な$1
     pattern:
-      - /行([いうえわ])/
+      - /行([いうえおわっ])/
     prh: 「行なう」を使用する
     specs:
       - from: 行い
@@ -245,8 +245,12 @@ rules:
         to: 行なう
       - from: 行え
         to: 行なえ
-      - from: 行わ
-        to: 行なわ
+      - from: 行おう
+        to: 行なおう
+      - from: 行わない
+        to: 行なわない
+      - from: 行って
+        to: 行なって
   - expected: 何卒
     pattern:
       - 何とぞ
@@ -352,6 +356,19 @@ rules:
         to: 2つ
       - from: ふたつ
         to: 2つ
+  - expected: ブラウザ
+    pattern:
+      - ウェブブラウザ
+      - Webブラウザ
+      - webブラウザ
+    prh: 固有名詞でない限り、「ウェブ」とする
+    specs:
+      - from: ウェブブラウザ
+        to: ブラウザ
+      - from: Webブラウザ
+        to: ブラウザ
+      - from: webブラウザ
+        to: ブラウザ
   - expected: 見積もり
     pattern:
       - 見積り
@@ -481,9 +498,31 @@ rules:
         to: 再読み込み
       - from: 再読み込み
         to: 再読み込み
+  - expected: システム標準マスター
+    pattern:
+      - /(システム標準マスターデータ|システム標準マスタ(?!ー))/
+    prh: マスターデータの総称は「マスターデータ」、総称以外は、基本的に「◯◯マスター」と表記する。
+    specs:
+      - from: システム標準マスタ
+        to: システム標準マスター
+      - from: システム標準マスターデータ
+        to: システム標準マスター
+      - from: システム標準マスター
+        to: システム標準マスター
+  - expected: カスタムマスター
+    pattern:
+      - /(カスタムマスターデータ|カスタムマスタ(?!ー))/
+    prh: マスターデータの総称は「マスターデータ」、総称以外は、基本的に「◯◯マスター」と表記する。
+    specs:
+      - from: カスタムマスタ
+        to: カスタムマスター
+      - from: カスタムマスターデータ
+        to: カスタムマスター
+      - from: カスタムマスター
+        to: カスタムマスター
   - expected: 行な$1
     pattern:
-      - /おこな([いうえわ])/
+      - /おこな([いうえおわっ])/
     prh: 「行なう」を使用する
     specs:
       - from: おこない
@@ -492,5 +531,9 @@ rules:
         to: 行なう
       - from: おこなえ
         to: 行なえ
-      - from: おこなわ
-        to: 行なわ
+      - from: おこなおう
+        to: 行なおう
+      - from: おこなわない
+        to: 行なわない
+      - from: おこなって
+        to: 行なって
