「ユーザビリティ」の誤検知を修正

--- a/dict/prh-tech-word.yml
+++ b/dict/prh-tech-word.yml
@@ -9,7 +9,7 @@ rules:
   - expected: マスター$1
     pattern: /マスタ([^ー])/
   - expected: ユーザー$1
-    pattern: /ユーザ([^ー])/
+    pattern: /ユーザ([^(ー|ビリティ)])/
   - expected: ユーザビリティ
     pattern: /ユーザービリティ?/
   - expected: フィルター$1
