--- a/dict/prh-tech-word.yml
+++ b/dict/prh-tech-word.yml
@@ -9,11 +9,11 @@ rules:
   - expected: マスター$1
     pattern: /マスタ([^ー])/
   - expected: ユーザー$1
-    pattern: /ユーザ([^ー])/
+    pattern: /ユーザ(?!(ー|ビリティ))/
   - expected: ユーザビリティ
     pattern: /ユーザービリティ?/
   - expected: フィルター$1
-    pattern: /フィルタ([^ー])/
+    pattern: /フィルタ(?!(ー|リング))/
   - expected: ナンバー$1
     pattern: /ナンバ([^ー])/
   - expected: メンバー$1
